[package]
name = "hako"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.2.6", features = ["multipart"] }
base64 = "0.13.0"
futures = "0.3.17"
log = "0.4.14"
rusqlite = { version = "0.27.0", features = ["bundled"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
simple_logger = "1.13.0"
structopt = "0.3.23"
tokio = { version = "1.12.0", features = ["rt-multi-thread", "macros"] }
tower-http = {version = "0.1.1", features = ["trace"]}
