[package]
name = "hako_webapp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
# See https://github.com/seanmonstar/reqwest/pull/1296
reqwest = { git = "https://github.com/seanmonstar/reqwest", rev = "cf87893b17b37e03309e6eda8acf8f21956b10b1", features = ["multipart"] }
wasm-logger = "0.2.0"
yew = "0.18.0"
