[package]
name = "hako_webapp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = "0.9.0"
gloo-file = "0.1.0"
hkdf = "0.11.0"
log = "0.4.14"
# See https://github.com/seanmonstar/reqwest/pull/1296
reqwest = { git = "https://github.com/seanmonstar/reqwest", rev = "cf87893b17b37e03309e6eda8acf8f21956b10b1", features = ["multipart", "stream"] }
sha2 = "0.9.8"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.55", features = ["Crypto", "Window", "Blob", "ReadableStream"] }
yew = "0.18.0"
