[package]
name = "hako_webapp"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = { version = "0.4.3", features = ["stream"] }
base64 = "0.13.0"
chacha20poly1305 = "0.9.0"
futures-util = "0.3.17"
getrandom = { version = "0.2.3", features = ["js"] }
hkdf = "0.11.0"
js-sys = "0.3.55"
log = "0.4.14"
# See https://github.com/seanmonstar/reqwest/pull/1296 and https://github.com/seanmonstar/reqwest/pull/1341
reqwest = { git = "https://github.com/seanmonstar/reqwest", rev = "6d682b53e246f9e982af81697bff0024b9fa82e3", features = ["multipart"] }
serde = "1.0.130"
serde_json = "1.0.68"
sha2 = "0.9.8"
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.28"
wasm-logger = "0.2.0"
wasm-streams = "0.2.1"
web-sys = { version = "0.3.55", features = ["Blob", "Url", "ReadableStream"] }
yew = "0.18.0"
yew-router = "0.15.0"
